force-app/main/default/objects/leadfeederapp__WebsitePageview__c/leadfeederapp__WebsitePageview__c.object-meta.xml
<CustomObject>
    <label>Visit pageview</label>
    <nameField>
        <label>Page Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit pageviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>