force-app/main/default/objects/leadfeederapp__WebsitePageview__c/fields/leadfeederapp__Duration__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Duration__c</fullName>
    <description>Duration</description>
    <label>Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>