force-app/main/default/objects/leadfeederapp__WebsitePageview__c/fields/leadfeederapp__PageURL__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__PageURL__c</fullName>
    <description>URL</description>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>