force-app/main/default/objects/leadfeederapp__WebsitePageview__c/fields/leadfeederapp__Time__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__Time__c</fullName>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>