force-app/main/default/objects/leadfeederapp__WebsitePageview__c/fields/leadfeederapp__WebsiteVisit__c.field-meta.xml
<CustomField>
    <fullName>leadfeederapp__WebsiteVisit__c</fullName>
    <label>Leadfeeder Visit</label>
    <referenceTo>leadfeederapp__WebsiteVisit__c</referenceTo>
    <relationshipLabel>Pageviews</relationshipLabel>
    <relationshipName>WebsiteVisit_Pageviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>